# site.backup

./: .gitignore  2nd-cg-article.html  CNAME  LICENSE  README.md  Taskfile.yml  archives.html  authors.html  categories.html  conjugate-gradient.html  index.html  least-squares-data-fitting.html  pelicanconf.py  publishconf.py  pyproject.toml  sitemap.xml  tags.html  tasks.py  vim.html
author/: manoj-baishya.html  rahul-john-roy-piyush-mohapatra-manoj-baishya.html
category/: articles.html  linear-algebra.html
content/articles/: post-1.rst  post-2.rst
content/data/: bookwoteenergyoil.xls  wop50-09.csv
content/pages/: about.rst
content/scripts/: wop50-09.py
css/: custom.css  main.css
feeds/: all.atom.xml  linear-algebra.atom.xml
files/: Pelican.html
files/assignment3/: index.html  p1Solution.html  p2Solution.html  p3Solution.html  p4Solution.html
js/: main.js
pages/: about.html
tag/: data.html  linear-algebra.html  optimisation.html  statistics.html
testfiles/: p3Solution.html
