[tool.poetry]
name = "manojbaishya"
version = "0.1.0"
description = "manojbaishya.github.io"
authors = ["Manoj Baishya <manojbaishya@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pelican = "^4.9.1"
invoke = "^2.2.0"
livereload = "^2.6.3"


[tool.poetry.group.dev.dependencies]
doc8 = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
